# crasis-experimental

./: .gitignore  .gitmodules  CMakeLists.txt
benchmark/: CMakeLists.txt  bench01.cpp
src/: CMakeLists.txt
src/crasis/experimental/: is.hpp  length.hpp
test/: CMakeLists.txt  bench01.cpp  test01-is-in-sparse-alphabet.cpp  test02-is-in-range-alphabet.cpp
